--- a/index.html
+++ b/index.html
@@ -1,212 +1,144 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>内見ステージング（安定版 v3）</title>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<title>内見ステージング（安定版 v3.1）</title>
 <style>
-  :root{--bg:#0e1726;--panel:#162135;--accent:#4cc9f0;--text:#e6edf3;--muted:#9fb3c8}
-  html,body{margin:0;height:100%;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Noto Sans JP,Hiragino Sans,Yu Gothic,sans-serif}
-  h1{font-size:18px;margin:12px 16px}
-  .toolbar{position:sticky;top:0;z-index:5;display:flex;flex-wrap:wrap;gap:8px;padding:10px 12px;background:linear-gradient(0deg,rgba(14,23,38,.6),rgba(14,23,38,1));backdrop-filter:blur(6px);border-bottom:1px solid rgba(255,255,255,.06)}
-  button,input{background:var(--panel);color:var(--text);border:1px solid rgba(255,255,255,.1);padding:10px 12px;border-radius:10px;font-size:14px}
-  button.primary{background:var(--accent);color:#04151a;border-color:transparent}
-  label{font-size:12px;color:var(--muted)}
-  .stage-wrap{position:relative;margin:12px auto;max-width:960px;border-radius:14px;overflow:hidden;border:1px solid rgba(255,255,255,.08);background:#000;min-height:46vh}
-  #stage{width:100%;display:none} /* 初期は非表示（壊れたアイコン防止） */
-  #overlay{position:absolute;left:0;top:0;right:0;bottom:0;touch-action:none}
-  #video{display:none;width:100%}
-  .info{max-width:960px;margin:8px auto;padding:8px 12px;color:var(--muted);font-size:12px}
-  .pill{display:inline-block;background:rgba(76,201,240,.15);border:1px solid rgba(76,201,240,.3);color:#cbefff;padding:2px 8px;border-radius:999px;margin-left:6px}
+:root{--bg:#0e1726;--panel:#162135;--accent:#4cc9f0;--text:#e6edf3;--muted:#9fb3c8}
+html,body{margin:0;height:100%;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Noto Sans JP,Hiragino Sans,Yu Gothic,sans-serif}
+h1{font-size:18px;margin:12px 16px}
+.toolbar{position:sticky;top:0;z-index:5;display:flex;flex-wrap:wrap;gap:8px;padding:10px 12px;background:linear-gradient(0deg,rgba(14,23,38,.6),rgba(14,23,38,1));backdrop-filter:blur(6px);border-bottom:1px solid rgba(255,255,255,.06)}
+button,input{background:var(--panel);color:var(--text);border:1px solid rgba(255,255,255,.1);padding:10px 12px;border-radius:10px;font-size:14px}
+button.primary{background:var(--accent);color:#04151a;border-color:transparent}
+label{font-size:12px;color:var(--muted)}
+.stage-wrap{position:relative;margin:12px auto;max-width:960px;border-radius:14px;overflow:hidden;border:1px solid rgba(255,255,255,.08);background:#000;min-height:46vh}
+#stage{width:100%;display:none}
+#overlay{position:absolute;left:0;top:0;right:0;bottom:0;touch-action:none}
+#video{display:none;width:100%}
+.log{max-width:960px;margin:8px auto;padding:8px 12px;color:var(--muted);font-size:12px}
+.pill{display:inline-block;background:rgba(76,201,240,.15);border:1px solid rgba(76,201,240,.3);color:#cbefff;padding:2px 8px;border-radius:999px;margin-left:6px}
+.toast{position:fixed;left:50%;bottom:18px;transform:translateX(-50%);background:#111a;backdrop-filter:blur(8px);color:#fff;padding:10px 14px;border-radius:10px;border:1px solid rgba(255,255,255,.2);opacity:0;transition:opacity .2s}
+.toast.show{opacity:1}
 </style>
 </head>
 <body>
-<h1>内見ステージング（オーバーレイ安定版 v3）</h1>
-
+<h1>内見ステージング（オーバーレイ安定版 v3.1）</h1>
 <div class="toolbar">
   <button id="btnCam">カメラ起動</button>
   <button id="btnSnap">撮影</button>
   <input id="filePick" type="file" accept="image/*" style="display:none">
   <button id="btnPick">写真を選ぶ</button>
+  <button id="btnDemo">デモ画像</button>
   <button id="btnAuto" class="primary">自動配置</button>
   <button id="btnReset">家具リセット</button>
   <button id="btnBase">基準2点</button>
   <label>基準長さ(m): <input id="refLen" type="number" step="0.01" value="2.0" style="width:90px"></label>
   <span id="scaleLabel" class="pill">スケール未設定</span>
 </div>
-
 <div id="wrap" class="stage-wrap">
   <img id="stage" alt="preview">
   <canvas id="overlay"></canvas>
   <video id="video" playsinline></video>
 </div>
-
-<div id="msg" class="info"></div>
-
+<div id="msg" class="log"></div>
+<div id="toast" class="toast"></div>
 <script>
-const $ = s=>document.querySelector(s);
-const stage = $("#stage");
-const overlay = $("#overlay");
-const ctx = overlay.getContext("2d");
-const video = $("#video");
-const wrap = $("#wrap");
-const msg = $("#msg");
-const scaleLabel = $("#scaleLabel");
+const $=s=>document.querySelector(s);
+const stage=$("#stage"), overlay=$("#overlay"), ctx=overlay.getContext("2d"), video=$("#video"), wrap=$("#wrap"), msg=$("#msg"), toast=$("#toast"), scaleLabel=$("#scaleLabel");
+let items=[], mode="drag", dragging=null, dragOff={x:0,y:0}, baselinePts=[], scaleMPerPx=null;
 
-let mode = "drag";
-let items = [];
-let dragging=null, dragOff={x:0,y:0};
-let scaleMPerPx=null;
-let baselinePts=[];
-
+function showToast(t){ toast.textContent=t; toast.classList.add('show'); setTimeout(()=>toast.classList.remove('show'),1500); }
 function log(t){ msg.textContent=t; }
 
-/* ====== サイズ同期（DPR対応） ====== */
 function fitCanvas(){
-  const rect = wrap.getBoundingClientRect();
-  const dpr = window.devicePixelRatio||1;
-  overlay.style.width = rect.width+"px";
-  overlay.style.height = rect.height+"px";
-  overlay.width = Math.round(rect.width*dpr);
-  overlay.height = Math.round(rect.height*dpr);
+  const rect=wrap.getBoundingClientRect(), dpr=window.devicePixelRatio||1;
+  overlay.style.width=rect.width+"px"; overlay.style.height=rect.height+"px";
+  overlay.width=Math.round(rect.width*dpr); overlay.height=Math.round(rect.height*dpr);
   ctx.setTransform(dpr,0,0,dpr,0,0);
-  drawPlaceholder();
-  redraw();
+  drawPlaceholder(); redraw();
 }
-window.addEventListener("resize", fitCanvas);
+window.addEventListener("resize",fitCanvas);
 
-/* ====== 初期プレースホルダー ====== */
 function drawPlaceholder(){
   if(stage.style.display==="block") return;
   ctx.clearRect(0,0,overlay.width,overlay.height);
-  const r = overlay.getBoundingClientRect();
-  ctx.fillStyle="#0b0f19";
-  ctx.fillRect(0,0,r.width,r.height);
-  ctx.fillStyle="rgba(255,255,255,.12)";
-  ctx.fillRect(0,r.height-64,r.width,64);
-  ctx.fillStyle="rgba(255,255,255,.8)";
-  ctx.font="14px system-ui,Segoe UI,Roboto";
-  ctx.fillText("写真を選ぶ か カメラ起動 で画像を読み込んでください。", 14, r.height-38);
+  const r=overlay.getBoundingClientRect();
+  ctx.fillStyle="#0b0f19"; ctx.fillRect(0,0,r.width,r.height);
+  ctx.fillStyle="rgba(255,255,255,.12)"; ctx.fillRect(0,r.height-64,r.width,64);
+  ctx.fillStyle="rgba(255,255,255,.85)"; ctx.font="14px system-ui,Segoe UI,Roboto";
+  ctx.fillText("『写真を選ぶ』または『デモ画像』→『自動配置』で確認できます。",14,r.height-38);
 }
 
-/* ====== 画像/カメラ ====== */
-$("#btnPick").onclick=()=>$("#filePick").click();
-$("#filePick").onchange=e=>{
-  const f=e.target.files[0];
-  if(!f) return;
-  const reader=new FileReader();
-  reader.onload=()=>{
-    stage.src=reader.result;
-    stage.style.display="block"; video.style.display="none";
-    stopCam();
-    items=[]; baselinePts=[]; scaleMPerPx=null; scaleLabel.textContent="スケール未設定";
-    setTimeout(fitCanvas,20);
-  };
-  reader.readAsDataURL(f);
-};
-
-async function startCam(){
-  try{
-    const stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"},audio:false});
-    video.srcObject=stream; video.style.display="block"; stage.style.display="none";
-    await video.play(); fitCanvas(); log("カメラ起動。『撮影』で静止画化。");
-  }catch(e){ alert("カメラ起動に失敗: "+e.message); }
-}
 function stopCam(){ if(video.srcObject){ video.srcObject.getTracks().forEach(t=>t.stop()); video.srcObject=null; } }
+async function startCam(){
+  try{ const s=await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"},audio:false});
+    video.srcObject=s; video.style.display="block"; stage.style.display="none"; await video.play(); fitCanvas(); log("カメラ起動。『撮影』で静止画へ。"); }
+  catch(e){ alert("カメラ起動に失敗: "+e.message); }
+}
 function snapshot(){
   if(!video.srcObject){ alert("カメラ未起動"); return; }
-  const c=document.createElement("canvas");
-  c.width=video.videoWidth; c.height=video.videoHeight;
-  c.getContext("2d").drawImage(video,0,0);
-  stage.src=c.toDataURL("image/jpeg",0.92);
-  stage.style.display="block"; video.style.display="none";
-  stopCam(); fitCanvas(); log("静止画に切替。");
+  const c=document.createElement("canvas"); c.width=video.videoWidth; c.height=video.videoHeight;
+  c.getContext("2d").drawImage(video,0,0); stage.src=c.toDataURL("image/jpeg",0.92); stage.style.display="block"; video.style.display="none"; stopCam(); fitCanvas(); log("静止画に切替。");
 }
-$("#btnCam").onclick=startCam;
-$("#btnSnap").onclick=snapshot;
+$("#btnCam").onclick=startCam; $("#btnSnap").onclick=snapshot;
 
-/* ====== 家具 ====== */
+$("#btnPick").onclick=()=>$("#filePick").click();
+$("#filePick").onchange=e=>{ const f=e.target.files[0]; if(!f) return;
+  const r=new FileReader(); r.onload=()=>{ stage.src=r.result; stage.style.display="block"; video.style.display="none"; stopCam(); items=[]; baselinePts=[]; scaleMPerPx=null; scaleLabel.textContent="スケール未設定"; setTimeout(fitCanvas,20); };
+  r.readAsDataURL(f);
+};
+
+$("#btnDemo").onclick=()=>{ stage.src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAA1AAAAEACAYAAAB3xv5SAAAACXBIWXMAAAsSAAALEgHS3X78AAAAGXRFWHRTb2Z0d2FyZQBwYWludC5uZXQgNC4xLjZ5M8QAAABZSURBVHic7cEBAQAAAIIg/69uSEABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPgGJ+QAAaeN8mEAAAAASUVORK5CYII="; stage.style.display="block"; video.style.display="none"; stopCam(); items=[]; baselinePts=[]; scaleMPerPx=null; scaleLabel.textContent="スケール未設定"; setTimeout(fitCanvas,20); };
+
 function redraw(){
-  if(stage.style.display!=="block" && !video.srcObject){ drawPlaceholder(); }
-  // 背景はimg/videoに任せ、ここは家具と基準線のみ
   ctx.clearRect(0,0,overlay.width,overlay.height);
-  for(const it of items) drawItem(it);
-  drawBaseline();
-}
-function drawItem(it){
-  ctx.save();
-  ctx.fillStyle=it.color; ctx.globalAlpha=.85;
-  ctx.fillRect(it.x,it.y,it.w,it.h);
-  ctx.globalAlpha=1; ctx.lineWidth=2; ctx.strokeStyle="rgba(255,255,255,.8)";
-  ctx.strokeRect(it.x,it.y,it.w,it.h);
-  ctx.fillStyle="#fff"; ctx.font="14px system-ui"; ctx.fillText(it.label,it.x+8,it.y+18);
-  ctx.restore();
-}
-function drawBaseline(){
-  if(baselinePts.length===0) return;
-  ctx.lineWidth=2; ctx.strokeStyle="#ffcc00"; ctx.fillStyle="#ffcc00";
-  ctx.beginPath(); ctx.arc(baselinePts[0].x,baselinePts[0].y,5,0,Math.PI*2); ctx.fill();
-  if(baselinePts.length>1){
-    ctx.beginPath(); ctx.moveTo(baselinePts[0].x,baselinePts[0].y); ctx.lineTo(baselinePts[1].x,baselinePts[1].y); ctx.stroke();
-    ctx.beginPath(); ctx.arc(baselinePts[1].x,baselinePts[1].y,5,0,Math.PI*2); ctx.fill();
+  // 家具
+  items.forEach(drawItem);
+  // 基準線
+  if(baselinePts.length){
+    ctx.lineWidth=2; ctx.strokeStyle="#ffcc00"; ctx.fillStyle="#ffcc00";
+    ctx.beginPath(); ctx.arc(baselinePts[0].x,baselinePts[0].y,5,0,Math.PI*2); ctx.fill();
+    if(baselinePts.length>1){ ctx.beginPath(); ctx.moveTo(baselinePts[0].x,baselinePts[0].y); ctx.lineTo(baselinePts[1].x,baselinePts[1].y); ctx.stroke(); ctx.beginPath(); ctx.arc(baselinePts[1].x,baselinePts[1].y,5,0,Math.PI*2); ctx.fill(); }
   }
 }
-function clampRect(r){
-  const rect=overlay.getBoundingClientRect();
-  const W=rect.width, H=rect.height;
-  r.x=Math.max(0,Math.min(r.x,W-r.w));
-  r.y=Math.max(0,Math.min(r.y,H-r.h));
+
+function drawItem(it){
+  ctx.save(); ctx.shadowColor="rgba(0,0,0,.5)"; ctx.shadowBlur=8; ctx.fillStyle=it.color; ctx.globalAlpha=.9;
+  ctx.fillRect(it.x,it.y,it.w,it.h);
+  ctx.globalAlpha=1; ctx.lineWidth=3; ctx.strokeStyle="#fff"; ctx.strokeRect(it.x,it.y,it.w,it.h);
+  ctx.fillStyle="#fff"; ctx.font="bold 15px system-ui"; ctx.fillText(it.label, it.x+8, it.y+18);
+  ctx.restore();
 }
+
+function clampRect(r){ const rect=overlay.getBoundingClientRect(), W=rect.width, H=rect.height; r.x=Math.max(0,Math.min(r.x,W-r.w)); r.y=Math.max(0,Math.min(r.y,H-r.h)); }
+
 $("#btnAuto").onclick=()=>{
-  const rect=overlay.getBoundingClientRect();
-  const W=rect.width, H=rect.height, m=20;
+  const rect=overlay.getBoundingClientRect(), W=rect.width, H=rect.height, m=20;
   const palette=["#4376d1","#8d5b2d","#2f7a3f"];
   function mk(label,w,h,x,y,i){const it={label,w,h,x,y,color:palette[i%palette.length]}; clampRect(it); return it;}
   const fw=Math.max(120,W*0.28), fh=Math.max(90,H*0.18);
   items=[ mk("ソファ",fw,fh,m,H-fh-m,0), mk("テーブル",fw*0.7,fh*0.7,W/2-fw*0.35,H-fh*.8-m,1), mk("観葉",fw*0.5,fh*0.9,W-fw*0.5-m,H-fh*0.9-m,2) ];
-  redraw(); log("自動配置（はみ出し防止）完了");
+  redraw(); showToast("自動配置: 家具3件"); log("自動配置完了。ドラッグで移動できます。");
 };
 
-/* ====== ドラッグ ====== */
 overlay.addEventListener("pointerdown",ev=>{
-  const p=point(ev);
-  if(mode==="baseline"){
-    baselinePts.push(p); if(baselinePts.length>2) baselinePts.shift();
-    redraw();
-    return;
-  }
-  for(let i=items.length-1;i>=0;i--){
-    const it=items[i];
-    if(p.x>=it.x&&p.x<=it.x+it.w&&p.y>=it.y&&p.y<=it.y+it.h){
-      dragging=it; dragOff.x=p.x-it.x; dragOff.y=p.y-it.y; overlay.setPointerCapture(ev.pointerId); break;
-    }
-  }
+  const p=pt(ev);
+  if(mode==="baseline"){ baselinePts.push(p); if(baselinePts.length>2) baselinePts.shift(); redraw(); return; }
+  for(let i=items.length-1;i>=0;i--){ const it=items[i]; if(p.x>=it.x&&p.x<=it.x+it.w&&p.y>=it.y&&p.y<=it.y+it.h){ dragging=it; dragOff.x=p.x-it.x; dragOff.y=p.y-it.y; overlay.setPointerCapture(ev.pointerId); break; } }
 });
-overlay.addEventListener("pointermove",ev=>{
-  if(!dragging||mode!=="drag") return;
-  const p=point(ev); dragging.x=p.x-dragOff.x; dragging.y=p.y-dragOff.y; clampRect(dragging); redraw();
-});
-overlay.addEventListener("pointerup",ev=>{ if(dragging){ dragging=null; overlay.releasePointerCapture(ev.pointerId);} });
+overlay.addEventListener("pointermove",ev=>{ if(!dragging||mode!=="drag") return; const p=pt(ev); dragging.x=p.x-dragOff.x; dragging.y=p.y-dragOff.y; clampRect(dragging); redraw(); });
+overlay.addEventListener("pointerup",ev=>{ if(dragging){ dragging=null; overlay.releasePointerCapture(ev.pointerId); } });
 
-function point(ev){ const r=overlay.getBoundingClientRect(); return {x:ev.clientX-r.left,y:ev.clientY-r.top}; }
+function pt(ev){ const r=overlay.getBoundingClientRect(); return {x:ev.clientX-r.left, y:ev.clientY-r.top}; }
 
-/* ====== 基準2点 ====== */
 $("#btnBase").onclick=()=>{
-  if(mode==="baseline"){
-    if(baselinePts.length===2){
-      const dx=baselinePts[0].x-baselinePts[1].x, dy=baselinePts[0].y-baselinePts[1].y;
-      const px=Math.hypot(dx,dy), ref=parseFloat($("#refLen").value||"0");
-      if(ref>0&&px>0){ scaleMPerPx=ref/px; scaleLabel.textContent=`スケール: ${scaleMPerPx.toFixed(4)} m/px`; log(`スケール設定 ${scaleMPerPx.toFixed(5)} m/px`); }
-    }
-    mode="drag"; $("#btnBase").textContent="基準2点";
-  }else{ baselinePts=[]; mode="baseline"; $("#btnBase").textContent="確定（基準2点）"; log("基準にしたい2点を順にタップ→確定"); }
+  if(mode==="baseline"){ if(baselinePts.length===2){ const dx=baselinePts[0].x-baselinePts[1].x, dy=baselinePts[0].y-baselinePts[1].y; const px=Math.hypot(dx,dy), ref=parseFloat($("#refLen").value||"0"); if(ref>0&&px>0){ scaleMPerPx=ref/px; scaleLabel.textContent=`スケール: ${scaleMPerPx.toFixed(4)} m/px`; showToast("スケール設定"); } } mode="drag"; $("#btnBase").textContent="基準2点"; }
+  else{ baselinePts=[]; mode="baseline"; $("#btnBase").textContent="確定（基準2点）"; showToast("2点を順にタップ"); }
   redraw();
 };
 
-/* ====== 初期化 ====== */
-$("#btnReset").onclick=()=>{ items=[]; redraw(); };
+$("#btnReset").onclick=()=>{ items=[]; redraw(); showToast("家具リセット"); };
 stage.onload=()=>{ stage.style.display="block"; fitCanvas(); };
 fitCanvas();
 </script>
-</body>
-</html>
+</body></html>
